--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,12 @@
 Ohun Plugin Changelog
 </h1>
 
+<p><b>0.0.2</b> -- September ??, 2020</p>
+
+<ul>
+     <li>Added support for using XMPP stanzas as well as REST</li>
+</ul>
+
 <p><b>0.0.1</b> -- September 17, 2020</p>
 
 <ul>
