--- a/changelog.html
+++ b/changelog.html
@@ -43,10 +43,12 @@
 Ohun Plugin Changelog
 </h1>
 
-<p><b>0.0.2</b> -- September ??, 2020</p>
+<p><b>0.0.2</b> -- November 16, 2020</p>
 
 <ul>
      <li>Added support for using XMPP stanzas as well as REST</li>
+     <li>Added support for using XEP-0156 to discover XMPP connection method</li>
+     <li>Added support for using XEP-0215 to discover TURN/STUN servers</li>
 </ul>
 
 <p><b>0.0.1</b> -- September 17, 2020</p>
